Bug 166691 - New commit causes pages to flicker very quickly, and causes white space in places where it shouldn't be
Summary: New commit causes pages to flicker very quickly, and causes white space in pl...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
25.8.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:25.8.0 target:25.2.5
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2025-05-22 15:53 UTC by Damian
Modified: 2025-06-04 12:12 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Form working without an issue in version 7.x (11.36 MB, video/quicktime)
2025-05-22 15:56 UTC, Damian
Details
Form opened in version 25 (at commit mentioned in bug description) (18.18 MB, video/quicktime)
2025-05-22 16:00 UTC, Damian
Details
Problem ODT File (277.23 KB, application/octet-stream)
2025-05-23 16:08 UTC, Damian
Details
Form working without an issue in version 7.x (3.93 MB, video/quicktime)
2025-05-23 19:54 UTC, Damian
Details
Form opened in version 25 (at commit mentioned in bug description) (7.71 MB, video/quicktime)
2025-05-23 21:36 UTC, Damian
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Damian 2025-05-22 15:53:19 UTC
Description:
Hello,
I have done some testing over the past week and want to report back on some important findings.

I have tested this commit from this bug(https://bugs.documentfoundation.org/show_bug.cgi?id=166210) in multiple ways, and ended up with the same result after each time. On my local LibreOfficeDev, I pulled the latest on master branch and tested using that build.

Also tested on master branch using the build I made on this bug's commit (https://git.libreoffice.org/core/+/0e9ef8943514a5642c0e11024eebb88bd0d91096%5E%21). And finally, I tested by downloading the “daily build” of 25.2.4 (https://dev-builds.libreoffice.org/daily/libreoffice-25-2/) which included the commit made for this bug. As mentioned previously, I came to the same findings after each step of testing. Here is the build number that I am on(what shows when clicking About -> LibreOfficeDev on my running version): https://git.libreoffice.org/core/+log/9430b6549a6bf4b6717530c578796e93c5a43f9a 

When I open odt’s (seems to be in only forms that have conditional sections from the extent of our testing), it causes the number of pages to jump extremely quickly between the number of pages the odt should be, and +,- 2 to 5 pages depending on the form. The number of pages jump fast enough that I can’t tell what is happening with the form for about 10-20 seconds and then it stops. When it stops jumping, it will end with more pages than it should be due to what appears to be page breaks in locations that should not break (and don’t break in older versions before this commit) – I haven’t seen a case where new page breaks get created in the xml.

In the video named “Recording of Version 7.2.5.2”, the form looks completely fine running in version 7, and looks this way on any version up to the commit I referenced above that caused it.

In the video named “Recording of issues in version 25”, the form has the page flickering issue when opened, and even after page flickering goes away, there are page breaks in locations that are unexpected (and page breaks that are not in older versions).

In screenshot 1, we deleted this line of code (selected line) and the new issue with jumping pages and extra white space goes away.
We also found that if you open the odt in the new version, where the new issue is happening, and unhide all conditional sections and click in different parts of the odt(random clicking depending on the odt) it will fix itself. But then if it is saved it will go back to it's incorrect form.


Steps to Reproduce:
Opening an odt in the new version causes this issue every single time without fail.

Actual Results:
Open the form in the new Libre office version.

Expected Results:
After the above steps are performed, the pages and page numbers will start flickering for about 10-20 seconds. After this stops, we will see that the form is displayed incorrectly. All of the locations where it is going to a new page in the middle of the page, is incorrect.


Reproducible: Always


User Profile Reset: No

Additional Info:
The form that is shown in the video "Recording of Version 7.2.5.2", is exactly what the form is expected to look like, and what it looks like in any version before the commit mentioned in the description. This commit: https://git.libreoffice.org/core/+/0e9ef8943514a5642c0e11024eebb88bd0d91096%5E%21
Comment 1 Damian 2025-05-22 15:56:13 UTC
Created attachment 200911 [details]
Form working without an issue in version 7.x
Comment 2 Damian 2025-05-22 16:00:28 UTC
Created attachment 200912 [details]
Form opened in version 25 (at commit mentioned in bug description)
Comment 3 m_a_riosv 2025-05-22 23:00:33 UTC
Please attach a sample file, reduce the size as much as possible without private information,
and paste the information in Menu/Help/About LibreOffice, there is a copy icon.
Comment 4 Damian 2025-05-23 16:08:18 UTC
Created attachment 200934 [details]
Problem ODT File
Comment 5 Damian 2025-05-23 19:54:43 UTC
Created attachment 200935 [details]
Form working without an issue in version 7.x
Comment 6 Damian 2025-05-23 20:21:48 UTC
Can I request that the 2 attachments with the following id's be removed/deleted from this bug please. Thank you so much!

Attachment with id: 200911 (name: "Form working without an issue in version 7.x")

Attachment with id: 200912 (name: "Form opened in version 25 (at commit mentioned in bug description) ")
Comment 7 Damian 2025-05-23 21:36:56 UTC
Created attachment 200938 [details]
Form opened in version 25 (at commit mentioned in bug description)
Comment 8 Andrew Kopf 2025-05-26 04:48:04 UTC
I can confirm the bug is in master.

Version: 25.8.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 19f3b72f34c487dc97d582712d21734a7e055fd5
CPU threads: 22; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Raster; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL threaded
Comment 9 Alan B. 2025-05-26 09:02:24 UTC
I can also confirm a successful reproduction of this bug with the master build; changing status to NEW.

Version: 25.8.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 94231af057db7871fb993582e2015c0fa21dde46
CPU threads: 16; OS: Windows 10 X86_64 (build 19045); UI render: Skia/Vulkan; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL threaded
Comment 10 Saburo 2025-05-29 10:15:33 UTC
bibisected with win64-25.8

Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 6db63bb533a5c7436793eab86e83f92322b37044

author	Mike Kaganski
commit 6db63bb533a5c7436793eab86e83f92322b37044

tdf#166210: invalidate parent's size when hiding section
Regression from commit 0c96119895b347f8eb5bb89f393351bd3c02b9f1

Change-Id: I4469749c9ff3d9fae43f00e01276c241e7c49f61
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/184720

Adding to cc: Mike Kaganski
Comment 11 Commit Notification 2025-06-01 16:01:13 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/ca3e88728f29422ad9e4bd7f9bec08b59cdf4192

tdf#166691: don't unhide sections temporarily to create their frames

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Commit Notification 2025-06-04 08:12:31 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/65684ffbe89638407cc855e38838c5ae20cc38ee

tdf#166691: don't unhide sections temporarily to create their frames

It will be available in 25.2.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.