sw/qa/extras/layout/layout5.cxx
@@ -1728,6 +1728,18 @@ CPPUNIT_TEST_FIXTURE(SwLayoutWriter5, testTdf165094)
     assertXPath(pXmlDoc, "//page[3]/body/tab", 1);
 }
 
+CPPUNIT_TEST_FIXTURE(SwLayoutWriter5, testTdf166691)
+{
+    // Given a document with a table which disallows breaking across pages, and that has a cell
+    // with an inner section with hide condition (evaluated to true), such as to have the cell
+    // height enough to fit on page 1, when the section is hidden, but too tall when it's shown:
+    createSwDoc("table-with-hidden-section.fodt");
+    auto pXmlDoc = parseLayoutDump();
+
+    // Check that there is only a single page
+    assertXPath(pXmlDoc, "//page", 1);
+}
+
 CPPUNIT_PLUGIN_IMPLEMENT();
 
 /* vim:set shiftwidth=4 softtabstop=4 expandtab: */
